# TimescaleDB-HybridSearch

./: README.md  demo.py  pyproject.toml  requirements.txt  restore_database.py  run_demo.sh  setup_demo.sh
data/: documents.csv  hybrid_search_backup.sql  hybrid_search_demo.sql  hybrid_search_demo_data_only.sql
sql/: 01_create_schema.sql  02_create_indexes.sql  03_update_timestamps.sql
src/: __init__.py  config.py  search.py
